--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -11,7 +11,7 @@
 @misc{fa18-523-57-Quora-Answer-1,
   Author       = {Kenneth Tran},
   Title        = {Quora-Answer-1},
-  howpublished = {Website},
+  howpublished = {Web page},
   note         = {Quora},
   url          = {https://www.quora.com/How-is-TensorFlow-architected-differently-from-Caffe-What-TensorFlow-capabilities-address-current-pain-points-or-limitations-in-Caffe},
 }
@@ -19,7 +19,7 @@
 @misc{fa18-523-57-GitHub,
   Author       = {Kenneth Tran},
   Title        = {GitHub},
-  howpublished = {Website},
+  howpublished = {Web page},
   note         = {GitHub},
   url          = {https://github.com/zer0n/deepframeworks#architecture},
 }
