--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,44 +1,135 @@
-@article{jia2014caffe,
-  Author  =       {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff
-                  and Karayev, Sergey and Long, Jonathan and Girshick,
-                  Ross and Guadarrama, Sergio and Darrell, Trevor},
-  Journal =      {arXiv preprint arXiv:1408.5093},
-  Title   =        {Caffe: Convolutional Architecture for Fast Feature
-                  Embedding},
-  Year    = 2014
-}
-
-@misc{fa18-523-57-Quora-Answer-1,
+@misc{fa18-523-58-Quora-Answer-1,
   Author       = {Kenneth Tran},
   Title        = {Quora-Answer-1},
   howpublished = {Web page},
-  note         = {Quora},
+  note =         {Accessed on 10-12-2018},
   url          = {https://www.quora.com/How-is-TensorFlow-architected-differently-from-Caffe-What-TensorFlow-capabilities-address-current-pain-points-or-limitations-in-Caffe},
 }
 
-@misc{fa18-523-57-GitHub,
+@misc{fa18-523-58-GitHub,
   Author       = {Kenneth Tran},
   Title        = {GitHub},
   howpublished = {Web page},
-  note         = {GitHub},
+  note =         {Accessed on 10-12-2018},
   url          = {https://github.com/zer0n/deepframeworks#architecture},
 }
 
-@misc{fa18-523-57-Quora-Answer-2,
+@misc{fa18-523-58-Quora-Answer-2,
   Author       = {Rafael Cartenet},
   Title        = {Quora-Answer-2},
   howpublished = {Website},
-  note         = {Quora},
+  note =         {Accessed on 10-12-2018},
   url          = {https://www.quora.com/What-is-the-difference-between-PyTorch-Caffe-and-TensorFlow},
 }
 
-@misc{fa18-523-57-Caffe-Home,
-  Author       =  {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff
-                  and Karayev, Sergey and Long, Jonathan and Girshick,
-                  Ross and Guadarrama, Sergio and Darrell, Trevor},
-  Title        =  {Caffe-Home},
+@misc{fa18-523-58-cnn,
+  author       = {Wikipedia},
+  title        = {Convolutional Neural Network},
   howpublished = {Website},
-  note         = {Caffe},
-  url          =  {http://caffe.berkeleyvision.org/},
+  note =         {Accessed on 10-12-2018},
+  url          = {https://en.wikipedia.org/wiki/Convolutional_neural_network},
 }
 
+@misc{fa18-523-58-vision,
+  author       = {Wikipedia},
+  title        = {Computer vision},
+  howpublished = {Website},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Computer_vision},
+}
+
+@misc{fa18-523-58-AI,
+  author       = {Wikipedia},
+  title        = {Artificial Intelligence},
+  howpublished = {Website},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Artificial_intelligence},
+}
+
+@misc{fa18-523-58-ANN,
+  author       = {Wikipedia},
+  title        = {Artificial Neural Network},
+  howpublished = {Website},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Artificial_neural_network},
+}
+
+@misc{fa18-523-58-Perceptron,
+  author       = {Wikipedia},
+  title        = {Perceptron},
+  howpublished = {Website},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Perceptron},
+}
+
+@misc{fa18-523-58-ml,
+  author       = {Wikipedia},
+  title        = {Machine Learning},
+  howpublished = {Website},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Machine_learning},
+}
+
+@misc{fa18-523-58-MATLAB,
+  author       = {Wikipedia},
+  title        = {MATLAB},
+  howpublished = {Website},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://en.wikipedia.org/wiki/MATLAB},
+}
+
+@misc{fa18-523-58-HDF5,
+  author       = {Wikipedia},
+  title        = {HDF5},
+  howpublished = {Website},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Hierarchical_Data_Format},
+}
+
+@misc{fa18-523-58-Quora-Answer-3,
+  Author       = {Subhasis Das, Hou Yunqing, Phil Parkman},
+  Title        = {Quora-Answer-3},
+  howpublished = {Website},
+  note =         {Accessed on 11-26-2018},
+  url          = {https://www.quora.com/What-are-the-pros-and-cons-of-Caffe-the-deep-learning-framework},
+}
+
+@misc{fa18-523-58-GPU,
+  Author       = {Wikipedia},
+  Title        = {Graphics_processing_unit},
+  howpublished = {Website},
+  note =         {Accessed on 11-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Graphics_processing_unit},
+}
+
+@misc{fa18-523-58-NLP,
+  Author       = {Wikipedia},
+  Title        = {Natural_language_processing},
+  howpublished = {Website},
+  note =         {Accessed on 11-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Natural_language_processing},
+}
+
+@misc{fa18-523-58-Sig-Processing,
+  Author       = {Wikipedia},
+  Title        = {Signal Processing},
+  howpublished = {Website},
+  note =         {Accessed on 11-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Signal_processing},
+}
+
+@misc{fa18-523-58-DL,
+  Author       = {Wikipedia},
+  Title        = {Deep_learning},
+  howpublished = {Website},
+  note =         {Accessed on 11-26-2018},
+  url          = {https://en.wikipedia.org/wiki/Deep_learning},
+}
+
+@misc{fa18-523-58-Caffe2,
+  Author       = {Facebook},
+  Title        = {Caffe2},
+  howpublished = {Web page},
+  note =         {Accessed on 10-26-2018},
+  url          = {https://github.com/pytorch/pytorch/tree/master/caffe2},
+}
