Added Example Code

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -133,3 +133,11 @@
   note =         {Accessed on 10-26-2018},
   url          = {https://github.com/pytorch/pytorch/tree/master/caffe2},
 }
+
+@misc{fa18-523-58-MNIST,
+  Author       = {Wikipedia},
+  Title        = {MNIST},
+  howpublished = {Web page},
+  note =         {Accessed on 12-01-2018},
+  url          = {https://en.wikipedia.org/wiki/MNIST_database},
+}
