--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -14,6 +14,14 @@
   url          = {https://github.com/zer0n/deepframeworks#architecture},
 }
 
+@misc{fa18-523-58-Caffe-GitHub,
+  Author       = {GitHub},
+  Title        = {Caffe},
+  howpublished = {Web page},
+  note =         {Accessed on 12-01-2018},
+  url          = {https://github.com/BVLC/caffe/tree/master/examples/mnist},
+}
+
 @misc{fa18-523-58-Quora-Answer-2,
   Author       = {Rafael Cartenet},
   Title        = {Quora-Answer-2},
